# dead-pixel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/data/: items.json  recipes.json
assets/fonts/: pixel_font.json
assets/maps/: test_map.json
assets/shaders/: sprite.frag  sprite.vert
assets/sprites/: spritesheet.json
docs/: dead_pixel_current_state_audit.md  dead_pixel_survival_gdd.html  dead_pixel_survival_gdd_v0.3.md  graphics_redesign_style_guide.md  milestone_backlog.md  mvl_implementation_plan.md  senior_advisor_planning_prompt.md  world_foundation_refactor_spec.md
src/: main.cpp
src/ai/: Pathfinder.cpp  Pathfinder.h
src/audio/: AudioManager.cpp  AudioManager.h  SoundId.h
src/components/: Animation.h  Bleeding.h  Combat.h  Facing.h  Health.h  Interactable.h  Inventory.h  MentalState.h  Needs.h  Particle.h  PlayerInput.h  Projectile.h  Sleeping.h  Sprite.h  Stamina.h  Structure.h  SurvivorAI.h  Traits.h  Transform.h  Velocity.h  Weather.h  Wounds.h  ZombieAI.h
src/core/: Game.cpp  Game.h  Input.cpp  Input.h
src/ecs/: ComponentArray.h  EntityManager.cpp  EntityManager.h  Types.h  World.cpp  World.h
src/items/: ItemDatabase.cpp  ItemDatabase.h
src/map/: LayoutData.h  MapGenerator.cpp  MapGenerator.h  TileMap.cpp  TileMap.h  TiledLoader.cpp  TiledLoader.h
src/noise/: NoiseModel.cpp  NoiseModel.h
src/rendering/: BitmapFont.cpp  BitmapFont.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
src/save/: SaveManager.cpp  SaveManager.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  BleedingSystem.cpp  BleedingSystem.h  BuildSystem.cpp  BuildSystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  CraftingSystem.cpp  CraftingSystem.h  DistrictInfectionSystem.cpp  DistrictInfectionSystem.h  InputSystem.cpp  InputSystem.h  InteractionSystem.cpp  InteractionSystem.h  InventorySystem.cpp  InventorySystem.h  MentalStateSystem.cpp  MentalStateSystem.h  MovementSystem.cpp  MovementSystem.h  NeedsSystem.cpp  NeedsSystem.h  ParticleSystem.cpp  ParticleSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  RenderSystem.cpp  RenderSystem.h  SurvivorAISystem.cpp  SurvivorAISystem.h  SurvivorInteractionSystem.cpp  SurvivorInteractionSystem.h  WeatherSystem.cpp  WeatherSystem.h  (+4 more)
tools/: generate_font_atlas.py  generate_items.py  generate_sounds.py  generate_sprites.py
(+1 files in other folders)
